# cppcon-2022-cpp-neovim-toy-calc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.rst  tasks.py  vcpkg.json
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app_main.cpp
src/toddlermath/: CMakeLists.txt  toddlermath_add.cpp  toddlermath_add.h  toddlermath_adder.cpp  toddlermath_adder.h  toddlermath_subtract.cpp  toddlermath_subtract.h  toddlermath_subtracter.cpp  toddlermath_subtracter.h
